tests/sksl/errors/OpaqueTypeInArray.sksl
in sampler x[1];
in sampler[1] y;
void main() {}
